--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
   <string name="action_sortby_bow">Sortby Bow No</string>
   <string name="action_sortby_name">Sortby Boat Name</string>
   <string name="action_fleet_size">Change Input Option</string>
+  <string name="action_reset_all">Delete all data</string>
 </resources>
